--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   mason_logger: ^0.2.5
   meta: ^1.9.1
   pub_updater: ^0.3.0
+  yaml: ^3.1.2
 
 dev_dependencies:
   build_runner: ^2.4.4
