--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cli_completion: ^0.3.0
   mason_logger: ^0.2.5
   meta: ^1.9.1
+  path: ^1.8.3
   pub_updater: ^0.3.0
   yaml: ^3.1.2
 
@@ -23,4 +24,4 @@ dev_dependencies:
   very_good_analysis: ^5.0.0
 
 executables:
-  file_organizer_cli:
+  organize:
